--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <nav class="nav">
         <a href="#">Gmail</a>
         <a href="#">Imágenes </a>
-        <a href="#"><i class="bx bxs-grid"></i></a>
-        <a href="#">C</a>
+        <a class="app" href="#"><i class="bx bxs-grid"></i></a>
+        <a class="user" href="#">C</a>
       </nav>
     </header>
     <main>
@@ -24,7 +24,6 @@
             <h1>g</h1>
             <h1>l</h1>
             <h1>e</h1>
-
         </div>
       <div class="input-container">
         <input
@@ -32,9 +31,9 @@
           name="search"
           placeholder="Busca en Google o escribe una URL"
         />
-        <a href=""><i class='bx bx-search'></i></a>
-        <a href=""><i class='bx bxs-microphone'></i></a>
-        <a href=""><i class='bx bx-camera' ></i></a>
+        <i class='bx bx-search'></i>
+        <i class='bx bxs-microphone'></i>
+        <i class='bx bx-camera' ></i>
       </div>
       <div class="tex-container">
         <a href="">Buscar en google</a>
