put the final details to the main and footers seccion, colors in background, icons and ancords

--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
       </nav>
     </header>
     <main>
-        <div class="title-container">
-            <h1>G</h1>
-            <h1>o</h1>
-            <h1>o</h1>
-            <h1>g</h1>
-            <h1>l</h1>
-            <h1>e</h1>
+        <div class="logo-container">
+           <img src="Google_2015_logo.svg.png" alt="logo">
         </div>
       <div class="input-container">
         <input
@@ -36,20 +31,24 @@
         <i class='bx bx-camera' ></i>
       </div>
       <div class="tex-container">
-        <a href="">Buscar en google</a>
+        <a href="">Buscar con google</a>
         <a href="">Probar suerte</a>
       </div>
     </main>
-    <footer>
-      <div class="contrainer-1">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+    <footer class="ftr-one">
+     <p>México</p>
+    </footer>
+    <footer class="ftr-two">
+      <div class="txt-cont1">
+        <a href="">Sobre Google</a>
+        <a href="">Publicidad</a>
+        <a href="">Negocios</a>
+        <a href="">Cómo funmciona la Búsqueda</a>
       </div>
-      <div class="container-2">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+      <div class="txt-cont2">
+        <a href="">Privacidad</a>
+        <a href="">Condiciones</a>
+        <a href="">Preferencias</a>
       </div>
     </footer>
   </body>
